@@ -1,4 +1,4 @@
-.Dd Jul 1, 2012
+.Dd January 3, 2013
 .Dt libcsplit 3
 .Os libcsplit
 .Sh NAME
@@ -40,7 +40,7 @@ http://code.google.com/p/libcsplit/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright 2008-2012 Joachim Metz <joachim.metz@gmail.com>.
+Copyright 2008-2013 Joachim Metz <joachim.metz@gmail.com>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 the libcsplit.h include file
