@@ -3,6 +3,10 @@ TODO
 * complete stand alone version
 * add tests
 
+20130103
+* changes to .gitignore
+* 2013 update
+
 20121224
 * changes to .gitignore
 * added msvscpp files
